clusters/overlays/cluster2/quarkuscoffeeshop-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkuscoffeeshop-web
  labels:
    app: quarkuscoffeeshop-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quarkuscoffeeshop-web
  template:
    metadata:
      name: quarkuscoffeeshop-web
      labels:
        app: quarkuscoffeeshop-web
        app.kubernetes.io/component: quarkuscoffeeshop-web
        app.kubernetes.io/instance: quarkuscoffeeshop-web
        app.kubernetes.io/part-of: quarkuscoffeeshop
        quarkuscoffeeshop: ""
        app.openshift.io/runtime-namespace: quarkuscoffeeshop-demo
    spec:
      containers:
        - name: quarkuscoffeeshop-web
          image: quay.io/quarkuscoffeeshop/quarkuscoffeeshop-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
