clusters/overlays/cluster2/quarkuscoffeeshop-web/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkuscoffeeshop-web
  namespace: quarkuscoffeeshop-demo
spec:
  host: quarkuscoffeeshop-web-quarkuscoffeeshop-demo.apps.cluster-5f6b.5f6b.example.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkuscoffeeshop-web
    weight: 100
  wildcardPolicy: None
